use a bit smaller font to avoid wrapping

--- a/app/frontend/styles/blog/_blog-list.scss
+++ b/app/frontend/styles/blog/_blog-list.scss
@@ -22,7 +22,7 @@
     .day{
       color: $grey-dark;
       float: right;
-      font-size: 3em;
+      font-size: 2.6em;
       line-height: 1;
       padding: 0;
     }
